sys/netinet/tcp_log_buf.h
@@ -447,6 +447,7 @@ tcp_get_bblog_state(struct tcpcb *tp)
 static inline void
 tcp_trace_point(struct tcpcb *tp, int num)
 {
+#ifdef TCP_BLACKBOX
 	if (((tcp_trace_point_config == num)  ||
 	     (tcp_trace_point_config == 0xffffffff)) &&
 	    (tcp_trace_point_bb_mode != 0) &&
@@ -461,6 +462,7 @@ tcp_trace_point(struct tcpcb *tp, int num)
 			tcp_trace_point_count = 0;
 		}
 	}
+#endif
 }
 
 #define	TCP_LOG_BUF_DEFAULT_SESSION_LIMIT	5000
